# BGSclient

./: CMakeLists.txt  main.cpp  makefile
include/: Message.h  ReadTask.h  WriteTask.h  messageEncoderDecoder.h
src/: ReadTask.cpp  WriteTask.cpp  connectionHandler.cpp  echoClient.cpp  messageEncoderDecoder.cpp
src/Messages/: ACK.cpp  ACKOrError.cpp  Error.cpp  FollowACK.cpp  Message.cpp  Notification.cpp  StatACK.cpp  UserListACK.cpp
